2009-02-15  Mart Raudsepp  <leio@gentoo.org>

	* src/mud-telnet.c (mud_telnet_process): Add a missing break
	after TEL_STATE_DO handler to stop the WILL code to be
	executed as well. Fixes telnet options negotiated by the
	server with a DO request, such as NAWS and TTYPE.

2009-02-13  Les Harris  <lharris@gnome.org>

	* ui/prefs.glade: Changed GtkSpinButton's page size
	to 0 as it should be, fixes our spin button.

2009-02-12  Les Harris  <lharris@gnome.org>

	* src/mud-connections.c: Closed memory leak. Simplified logic
	in a control structure.
	* src/mud-connection-view.c, src/mud-log.c, src/modules.c,
	  src/mud-window.c: fwrites() now raise g_critical on failure.
	  All functions that expect a format get one now rather than
	  simply a string as format+data.

2009-02-05  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-mccp.[ch]: Removed files.
	* src/mud-telnet.[ch], src/mud-telnet-handlers.[ch],
	  src/mud-connection-view.c: Removed MCCP related code.
	* src/Makefile.am: Removed references to removed files.
	* configure.ac: Disabled MCCP check.

2009-02-05  Les Harris  <lharris@gnome.org>

	* src/mud-connections.c: Fixed reimplemented
	certain list frees to the recommend form.
	Fixed a corner case where renaming a mud 
	would not delete the previous named mud from
	gconf.

2008-12-13  Przemysław Grzegorczyk  <pgrzegorczyk@gmail.com>

	* src/gconf-helper.c:
	* src/gnome-mud.c:
	* src/modules.c:
	* src/mud-connection-view.c:
	* src/mud-connection-view.h:
	* src/mud-preferences-window.c:
	* src/mud-profile.c:
	* src/mud-profile.h:
	* src/mud-regex.c:
	* src/mud-tray.c:
	* src/mud-window.c: Cleaned up gtk and glib includes
	to use only toplevel headers. Bug #564363.

2008-12-09  Les Harris  <lharris@gnome.org>

	* gnome-mud-desktop.in: Applied 
	patch from Emilio Pozeulo Monfort
	bringing the desktop file up to
	current standards (Bug# 563846)

2008-11-13  Les Harris  <lharris@gnome.org>

	* src/mud-connections.c: Removed
	logging g_messages.
